--- a/style.css
+++ b/style.css
@@ -1,7 +1,49 @@
-body{
-    background-image: url(./img/5570173.jpg);
+body {
+    background: rgb(58, 180, 147);
+    background: linear-gradient(90deg, rgba(58, 180, 147, 1) 0%, rgba(29, 253, 145, 1) 50%, rgba(58, 180, 147, 1) 100%);
+    font-family: Arial, Helvetica, sans-serif;
+    /* background-image: url(./img/5570173.jpg);
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; */
+}
+
+nav {
+    background-color: #0F0F27;
+}
+
+#my-image {
+    border-radius: 50%;
+    margin-top: 20%;
+    width: 60%;
+
+    animation: go-back 2s infinite alternate;
+}
+
+#apresentation {
+    margin-top: 15%;
+}
+
+.nav-link {
+    color: white !important;
+}
+
+
+
+.post {
+    background-color: #0F0F27;
+    border-radius: 6px;
+    color: white;
+    padding: 8px;
+}
+
+@keyframes go-back {
+    from {
+        transform: translateY(-30px);
+    }
+
+    to {
+        transform: translateY(0);
+    }
 }
