--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-main {
+/* main {
     background: url("bg.jpg") no-repeat center center;
     background-size: cover;
     height: 92vh;
-}
+} */
 
 /* @keyframes go-back {
     from {
@@ -45,13 +45,7 @@ main {
 }
 
 .container {
-    background-color: white !important;
-    padding-top: 55px;
-    height: 100%;
-    margin: 30px;
-    color: grey;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-top: 3%;
 }
 
 .icon-contact {
@@ -88,8 +82,8 @@ main {
 #my-image {
     border-radius: 50%;
     max-width: 60%;
-    margin-top: 20%;
-    width: 50%;
+    /* margin-top: 20%; */
+    /* width: 50%; */
 
     animation: go-back 3s infinite alternate;
 }
