--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -6,16 +6,24 @@
     padding-bottom: 10px;
 }
 
+.apresentation h1 {
+    font-weight: 700;
+
+    padding-top: 10px;
+}
+
 .social {
     font-size: 30px;
-    
-    
 }
 
 .social a {
     text-decoration: none;
     color: white;
     margin: 7px;
+}
+
+.social i {
+    transition: 0.5s;
 }
 
 .social i:hover {
@@ -33,6 +41,7 @@
 
 .skill i {
     margin: 7px;
+    transition: 0.5s;
 }
 
 .skill i:hover {
@@ -75,5 +84,13 @@
 
     100% {
         transform: translateY(0);
+    }
+}
+
+@media screen and (width < 768px) {
+    .social {
+        text-align: center;
+
+        margin-bottom: 10px;
     }
 }
