--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+body {
+    background-color: #042a32;
+}
+
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background: rgb(37, 37, 37);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    border: 3px solid rgb(37, 37, 37);
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -69,6 +87,11 @@
     margin: 10px;
     font-size: 4vh;
 }
+
+
+
+
+
 
 /* #apresentation {
     margin-top: 15%;
