--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #042a32;
+    background-color: #292929;
 }
 
 body::-webkit-scrollbar {
@@ -18,16 +18,9 @@ body::-webkit-scrollbar-thumb {
 
 * {
     font-family: Arial, Helvetica, sans-serif;
+    transition: 0.5s;
 }
 
-.navbar {
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
 
 #apresentation {
     margin-top: 56px;
@@ -113,12 +106,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 #my-image {
-    /* border-radius: 12px; */
-    max-width: 60%;
-    /* margin-top: 20%; */
-    /* width: 50%; */
-
-    /* animation: go-back 3s infinite alternate; */
+    width: 80%;
+    max-width: 300px;
 }
 
 @media screen and (width < 768px) {
