--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,11 @@
 .navbar {
-    background-color: rgba(255, 255, 255, 0.8);
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
 }
