--- a/css/main.css
+++ b/css/main.css
@@ -116,4 +116,8 @@ body::-webkit-scrollbar-thumb {
         margin: 0;
         margin-top: 1%;
     }
+
+    #apresentation {
+        margin-top: 0px;
+    }
 }
