--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -14,6 +14,12 @@
 
 .apresentation img {
     /* border-radius: 50%; */
+    /* width: 300px;
+    height: 200px; */
+    transition: transform 0.5s ease-in-out;
+}
+.apresentation img:hover {
+    transform: perspective(800px) rotateY(-20deg) scale(1.1);
 }
 
 .social {
