--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,24 @@ body::-webkit-scrollbar-thumb {
     font-size: 4vh;
 }
 
+.line-full {
+    margin-top: 0px;
+    background-color: gray;
+    height: 1px;
+    width: 100%;
+}
 
+.footer {
+    /* background-color: ; */
+    padding-left: 100px;
+    padding-right: 100px;
+    color: white;
+    text-align: center;
+}
+
+.footer .dev {
+    padding: 25px;
+}
 
 
 
@@ -119,5 +136,10 @@ body::-webkit-scrollbar-thumb {
 
     #apresentation {
         margin-top: 0px;
+    }
+
+    .footer {
+        padding-left: 5px;
+        padding-right: 5px;
     }
 }
