--- a/css/project.css
+++ b/css/project.css
@@ -3,6 +3,7 @@
     padding-bottom: 100px;
     padding-left: 100px;
     padding-right: 100px;
+    padding-top: 10px;
 }
 
 .project h1 {
@@ -18,9 +19,9 @@
 
 .projects {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* Centraliza horizontalmente */
 }
 
@@ -31,21 +32,6 @@
 .show-project-img:hover {
     scale: 1.0;
     transition: 0.5s;
-}
-
-.show-project-img::before {
-    content: attr(data-tooltip);
-    color: aqua;
-}
-
-.show-project-img::before, .show-project-img::after {
-    --scale: 0;
-
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%) scale(var(--scale));
-    transition: 0.5s transform;
-    transform-origin: bottom center;
 }
 
 .project-img img {
@@ -63,11 +49,6 @@
     box-shadow: 5px 5px 5px rgb(0, 0, 0, 25%);
 
 }
-
-/* .project-img:hover {
-    filter: opacity(25%);
-} */
-
 
 .description-project {
     display: none;
