--- a/css/project.css
+++ b/css/project.css
@@ -18,14 +18,32 @@
 }
 
 .projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
     /* justify-content: space-between; */
     /* Centraliza horizontalmente */
 }
 
 .show-project-img {
+    display: flex;
+    align-items: center;
+    padding: 40px;
+}
+
+.project-img,
+.text-span {
+    flex: 1;
+    /* Para ambos os elementos ocuparem 50% da largura */
+    display: inline-block;
+    vertical-align: top;
+}
+
+.text-span {
+    padding: 10px;
+}
+
+.show-project-img img {
     width: 30%;
 }
 
@@ -35,73 +53,21 @@
 }
 
 .project-img img {
-    display: block;
+    /* display: block; */
 
     margin: 0;
 
     border-radius: 8px;
 
-    max-width: 100%;
+    min-width: 300px;
+    width: 100%;
+    padding: 20px;
     /* height: 169px; */
     /* max-height: 50%; */
 
     transition: 0.5s;
-    box-shadow: 5px 5px 5px rgb(0, 0, 0, 25%);
+    /* box-shadow: 5px 5px 5px rgb(0, 0, 0, 25%); */
 
-}
-
-.description-project {
-    display: none;
-    position: absolute;
-
-    text-align: center;
-
-    top: 50%;
-    left: 50%;
-
-    width: 100%;
-    height: 100%;
-
-    transform: translate(-50%, -50%);
-
-    background-color: rgba(0, 0, 0, 1);
-
-    color: white;
-
-    padding: 10px;
-    border-radius: 5px;
-
-    
-}
-
-
-.description-project .title {
-    font-weight: 700;
-}
-
-.description-project:hover {
-    transition: 5s;
-    
-}
-
-.show-project-img:hover .description-project {
-    display: block;
-    transition: 10s;
-}    
-
-.show-project {
-    background-color: rgb(41, 41, 41);
-    color: white;
-    /* width: 240px; */
-    width: 30%;
-    height: 300px;
-    /* max-height: 300px; */
-    /* max-height: 20%; */
-
-    border-radius: 8px;
-
-    transition: 0.5s;
-    box-shadow: 5px 5px 5px rgb(0, 0, 0, 50%);
 }
 
 .show-project img {
@@ -115,32 +81,6 @@
     max-height: 40%;
 }
 
-/* .img-project::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #f0f0f0;
-    z-index: -1;
-} */
-
-.show-project h3 {
-    font-size: 20px;
-    margin-top: 5px;
-    margin-left: 7px;
-    margin-right: 7px;
-}
-
-.show-project p {
-    font-size: 15px;
-    font-weight: 100;
-    margin-left: 7px;
-    margin-right: 7px;
-}
-
 .skill-used i {
     font-size: 3vw;
 }
@@ -148,6 +88,13 @@
 .show-project:hover {
     scale: 1.02;
     transition: 0.5s;
+}
+
+.btn-access-project {
+    background-color: #292929;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
 @media screen and (width < 768px) {
@@ -165,15 +112,14 @@
     }
 
     .show-project-img {
-        color: white;
+        color: rgb(0, 0, 0);
         width: 80%;
         margin-bottom: 20px;
     }
 
-    .show-project {
-        margin-left: 0px;
-        margin-top: 10px;
-
-        width: 80%;
+    .project-img,
+    .text-span {
+        /* Para ambos os elementos ocuparem 50% da largura */
+        display: table-column;
     }
 }
