--- a/css/certification.css
+++ b/css/certification.css
@@ -5,13 +5,13 @@
     padding-right: 100px;
 }
 
-.show-certification{
+.show-certification {
     transition: 0.5s;
     padding: 10px;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    
+
 }
 
 .show-certification:hover {
@@ -19,12 +19,15 @@
     background-color: rgb(255, 255, 255);
     color: black;
 }
-.show-certification:hover .img, title{
+
+.show-certification:hover .img,
+title {
     transition: 0.2s;
 }
 
 
-.img, .title {
+.img,
+.title {
     /* flex: 1; */
 }
 
@@ -56,7 +59,7 @@
 }
 
 .line-small {
-        height: 1px;
+    height: 1px;
 }
 
 @media screen and (width < 768px) {
