--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -15,6 +15,7 @@
 .apresentation img {
     transition: transform 0.5s ease-in-out;
 }
+
 .apresentation img:hover {
     transform: perspective(800px) rotateY(-20deg) scale(1.1);
 }
@@ -51,6 +52,10 @@
     transition: 0.5s;
 }
 
+.skill div {
+    display: none;
+}
+
 .skill i:hover {
     color: white;
     scale: 1.2;
@@ -71,6 +76,40 @@
 
 .skill .fa-bootstrap:hover {
     color: #563D7C;
+}
+
+.tooltip {
+    opacity: 1;
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #fff;
+    color: #292929;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    position: absolute;
+    z-index: 1000;
+
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    transition: 0.5s;
+}
+
+.tooltip i {
+    font-size: 40px;
+    z-index: 1 !important;
 }
 
 @media screen and (width < 768px) {
