--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,31 @@
     top: 0;
     left: 0;
     width: 100%;
-    
+
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(10px);
+}
+
+.nav-item {
+    display: inline-block;
+}
+
+.nav-link {
+    position: relative;
+    text-decoration: none;
+}
+
+.nav-link::before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #000;
+    bottom: 0;
+    left: 0;
+    transition: width 0.3s;
+}
+
+.nav-link:hover::before {
+    width: 100%;
 }
