--- a/css/certification.css
+++ b/css/certification.css
@@ -1,5 +1,6 @@
 .certification {
     color: white;
+    padding-top: 20px;
     padding-bottom: 50px;
     padding-left: 100px;
     padding-right: 100px;
