--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,6 +8,17 @@
 
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(10px);
+
+    z-index: 9999
+}
+
+.navbar-brand {
+    transition: 0.5s;
+}
+
+.navbar-brand:hover {
+    transition: 0.3s;
+    scale: 1.1;
 }
 
 .nav-item {
