--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -6,10 +6,20 @@
     padding-bottom: 10px;
 }
 
-.apresentation h1 {
-    font-weight: 700;
+.apresentation .title {
+    margin-bottom: 15px;
+}
 
-    padding-top: 10px;
+.apresentation .my-name {
+    font-size: xx-large;
+    font-weight: 700;
+}
+
+.apresentation .my-job {
+    font-size: large;
+    font-stretch: condensed;
+    color: rgb(120, 120, 120);
+    /* font-style: ; */
 }
 
 .apresentation img {
