--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,14 @@ body::-webkit-scrollbar-thumb {
     padding: 25px;
 }
 
+.title-section {
+    padding-top: 25px;
+    width: 100%;
+    font-weight: 700;
+    text-align: center;
+    font-size: xx-large;
+}
+
 
 
 
