--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body::-webkit-scrollbar-thumb {
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    /* transition: 0.5s; */
 }
 
 .color-black {
@@ -62,15 +61,6 @@ body::-webkit-scrollbar-thumb {
     background-color: green;
 }
 
-/* .card-project {
-    background-color: aqua;
-    margin: 0 auto;
-    max-width: 80%;
-    width: 80%;
-    height: 20rem;
-    border-radius: 12px;
-} */
-
 .container {
     margin-top: 3%;
 }
@@ -95,7 +85,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .footer {
-    /* background-color: ; */
     padding-left: 100px;
     padding-right: 100px;
     color: white;
@@ -112,22 +101,8 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     font-weight: 700;
     text-align: center;
-    font-size: xx-large;
+    font-size: 40px;
 }
-
-
-
-
-/* #apresentation {
-    margin-top: 15%;
-    max-width: 100%;
-    height: auto;
-}
-
-#apresentation .title {
-    max-width: 10%;
-    font-size: 4vw;
-} */
 
 #scroll-animation {
     position: absolute;
