--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -4,6 +4,7 @@
 
     padding-top: 56px;
     padding-bottom: 10px;
+    /* height: 80vh; */
 }
 
 .apresentation .title {
@@ -55,6 +56,7 @@
     font-size: 40px;
 
     margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 .skill i {
