--- a/css/project.css
+++ b/css/project.css
@@ -49,7 +49,7 @@
     min-width: 300px;
     width: 100%;
 
-    transform: scale(0.7);
+    transform: scale(0.75);
     box-shadow: 0 60px 123px -25px rgba(112, 112, 112, 0.6);
     transition: 0.6s;
 }
@@ -141,10 +141,18 @@
     .show-project-img img{
         color: rgb(0, 0, 0);
 
-        transform: scale(0.9);
+        /* transform: scale(0.9); */
 
         margin-bottom: 0px;
     }
+
+    /* .project-img img {
+    
+        min-width: 300px;
+        width: 100%;
+    
+        transform: scale(0.7);
+    } */
 
     .text-span {     
         width: 100%;
