--- a/css/main.css
+++ b/css/main.css
@@ -122,5 +122,7 @@ body::-webkit-scrollbar-thumb {
     .footer {
         padding-left: 5px;
         padding-right: 5px;
+        margin-bottom: 50px;
+        margin-top: 40px;
     }
 }
