--- a/css/scroll-reveal.css
+++ b/css/scroll-reveal.css
@@ -7,6 +7,6 @@
 .project-right-reveal,
 .certification-reveal,
 .certification-left-reveal,
-.footer-reveal {
+.footer-reveall {
     visibility: hidden;
 }
