refactor: rename class

--- a/css/scroll-reveal.css
+++ b/css/scroll-reveal.css
@@ -5,8 +5,8 @@
 .skills-reveal,
 .project-left-reveal,
 .project-right-reveal,
-.certification-reveal,
-.certification-left-reveal,
+.journey-reveal,
+.journey-left-reveal,
 .footer-reveal {
     visibility: hidden;
 }
