--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -2,8 +2,9 @@
     background-color: #292929;
     color: white;
 
-    padding-top: 56px;
+    padding-top: 7%;
     padding-bottom: 10px;
+    height: 100vh;
 }
 
 .apresentation .title {
@@ -134,6 +135,9 @@
 }
 
 @media screen and (width < 768px) {
+    .apresentation {
+        height: auto;
+    }
     .social {
         text-align: center;
 
