--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body::-webkit-scrollbar-thumb {
 
 .half {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     width: 45%;
 }
 
