--- a/css/skill-status.css
+++ b/css/skill-status.css
@@ -1,13 +1,19 @@
 .skill-status {
-    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    background-color: #f7f7f7;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 25px;
 
     text-align: center;
 
-    padding-top: 40px;
     padding-bottom: 50px;
+
+    height: 100vh;
 
 }
 
@@ -27,8 +33,9 @@
 
     width: 160px;
     min-width: 160px;
+    background-color: #fff;
 
-    box-shadow: 0 10px 80px -5px rgba(112, 112, 112, 0.6);
+    box-shadow: 0 8px 24px 1px rgba(112, 112, 112, 0.2);
     transition: 0.6s;
 
 }
