feat? modifying height to auto

--- a/css/skill-status.css
+++ b/css/skill-status.css
@@ -107,6 +107,8 @@
     .skill-status {
         padding-left: 10px;
         padding-right: 0px;
+
+        height: auto;
     }
 
     .skill-container {
