--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    background-color: #292929;
+    background-color: #000;
     color: white;
 
     padding-top: 7%;
@@ -12,10 +12,11 @@
 
 .apresentation .title {
     margin-bottom: 15px;
+    /* color: #BD2B3A; */
 }
 
 .apresentation .my-name {
-    font-size: xx-large;
+    font-size: 40px;
     font-weight: 700;
 }
 
@@ -48,11 +49,12 @@
 .apresentation .image img {
     scale: 1;
     max-width: 100%;
-    transition: transform 0.5s ease-in-out;
+    /* transition: transform 0.5s ease-in-out; */
+    animation: floatAnimation 4s infinite;
 }
 
 .apresentation img:hover {
-    transform: perspective(800px) rotateY(-20deg) scale(1.1);
+    /* transform: perspective(800px) rotateY(-20deg) scale(1.1); */
 }
 
 .social {
@@ -164,13 +166,25 @@
     font-size: 30px;
 }
 
+@keyframes floatAnimation {
+    0%, 100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-50px);
+    }
+}
+
 @media screen and (width < 768px) {
     .apresentation {
         grid-template-columns: 100%;
+        height: auto;
     }
 
     .apresentation .image {
         grid-column: span 2;
+        margin-top: 80px;
 
     }
 
