--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -37,6 +37,10 @@
     transform: translateY(-50%);
 }
 
+.apresentation .my-infos p {
+    line-height: 33px;
+}
+
 .apresentation .image {
     display: flex;
     justify-content: center;
@@ -50,7 +54,7 @@
     scale: 1;
     max-width: 100%;
     /* transition: transform 0.5s ease-in-out; */
-    animation: floatAnimation 4s infinite;
+    animation: floatAnimation 8s infinite;
 }
 
 .apresentation img:hover {
