--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(2, 1fr);
 
     background-color: #000;
-    color: white;
+    color: rgb(220, 220, 220);
 
     padding-top: 7%;
     padding-bottom: 10px;
