--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -47,12 +47,11 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    width: 100%;
 }
 
 .apresentation .image img {
-    scale: 1;
-    max-width: 100%;
+    object-fit: contain;
+    display: block;
     animation: floatAnimation 8s infinite;
 }
 
@@ -166,11 +165,11 @@
 
 @keyframes floatAnimation {
     0%, 100% {
-        transform: translateY(0);
+        transform: translateY(25);
     }
 
     50% {
-        transform: translateY(-50px);
+        transform: translateY(-25px);
     }
 }
 
@@ -178,6 +177,10 @@
     .apresentation {
         grid-template-columns: 100%;
         height: auto;
+    }
+
+    .skill {
+        display: none;
     }
 
     .apresentation .image {
@@ -189,7 +192,7 @@
     .social {
         text-align: center;
 
-        margin-bottom: 10px;
+        margin-bottom: 100px;
     }
 }
 
