--- a/css/apresentation.css
+++ b/css/apresentation.css
@@ -52,7 +52,6 @@
 .apresentation .image img {
     object-fit: contain;
     display: block;
-    animation: floatAnimation 8s infinite;
 }
 
 .social {
@@ -163,19 +162,10 @@
     font-size: 35px;
 }
 
-@keyframes floatAnimation {
-    0%, 100% {
-        transform: translateY(25);
-    }
-
-    50% {
-        transform: translateY(-25px);
-    }
-}
-
 @media screen and (width < 768px) {
     .apresentation {
         grid-template-columns: 100%;
+        padding-top: 0%;
         height: auto;
     }
     
@@ -205,7 +195,7 @@
     }
 }
 
-@media screen and (height < 700px) {
+@media screen and (height < 700px) {    
     .tooltip a i {
         font-size: 30px;
     }
